# starlink-light

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: devcontainer.json
hardware/: README.md
hardware/gateway/: 网关.PcbDoc
hardware/slave/: 无线开关_从机.eprj2
main/: CMakeLists.txt  README.md  config.example.h  esp32_gateway_main.c  gateway_state.c  gateway_state.h  mqtt_ha.c  mqtt_ha.h  uart_protocol.c  uart_protocol.h  wifi_prov.c  wifi_prov.h
mapper/: .env.example  .gitignore  1527_mapper.html  1527_mapper_server.js  1527_mapper_server.py  README.md
ota-server/: .env.example  .gitignore  README.md  config.json  device_client.py  manifest.json  server.py  server_mqtt.py  upload_tool.py
ota-server/firmware/: README.md
ota-server/templates/: index.html
slave/: README.md  main.c  starlink-slave.uvopt  starlink-slave.uvproj
stc15w/: README.md  STC15W4K48S4.cfg  main.c  starlink-stc15.uvopt  starlink-stc15.uvproj
tools/: README.md  addr_manager.py  slave_flasher.py  slave_flasher_gui.py
